--- a/Python_DSA.ipynb
+++ b/Python_DSA.ipynb
@@ -984,10 +984,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b0ba722",
+   "id": "419c2f00",
    "metadata": {},
    "source": [
-    "## Basic Algorithm"
+    "## Basic Algorithm ##"
    ]
   },
   {
@@ -1021,8 +1021,7 @@
     "# O(n^2) Time Complexity for average and worst case (when the array is sorted in reverse)\n",
     "# O(n) Time Complexity for best case (# when the array is already sorted)\n",
     "# O(1) Space Complexity\n",
-    "# efficient for small test cases\n",
-    "# This algorit"
+    "# efficient for small test cases"
    ]
   },
   {
@@ -1097,8 +1096,471 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "ded3e866",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Kadane Algorithm\n",
+    "# This algorthm is used to the maximum sum of subarray  \n",
+    "# such that subarray sum less than zero updated to zero\n",
+    "arr1 = [1,2,7,-4,3,2,-10,9,1]\n",
+    "n = len(arr1)\n",
+    "max_end_here = 0\n",
+    "max_so_far = 0\n",
+    "for i in range(n):\n",
+    "    max_end_here += arr1[i]\n",
+    "    if max_end_here > max_so_far:\n",
+    "        max_so_far = max_end_here\n",
+    "    if max_end_here < 0:\n",
+    "        max_end_here = 0\n",
+    "print(max_so_far)\n",
+    "# O(n) Time Complexity\n",
+    "# O(1) Space Complexity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "f0bf9a44",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 1, 1, 2, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Dutch National Flag Problem\n",
+    "# We have given an array consisting 0s, 1s and 2s\n",
+    "# We need to sort such that first all 0's come than 1's and 2's\n",
+    "# We will use three pointer\n",
+    "arr1 = [0,1,2,2,1,0]\n",
+    "n = len(arr1) \n",
+    "l = 0 # first variable\n",
+    "k = 0 # middle variable\n",
+    "j = n - 1 # variable at the last position\n",
+    "while k<=j: \n",
+    "    if arr1[k] == 0:\n",
+    "        arr1[l],arr1[k] = arr1[k],arr1[l]\n",
+    "        l += 1\n",
+    "        k += 1\n",
+    "    if arr1[k] == 1:\n",
+    "        k += 1\n",
+    "    else:\n",
+    "        arr1[j],arr1[k] = arr1[k],arr1[j]\n",
+    "        j -= 1\n",
+    "print(arr1)\n",
+    "# O(n) Time Complexity\n",
+    "# O(1) Space Complexity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "14ae3ddc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Moore Voting Algorithm\n",
+    "# This algortihm is used to find the majority element i.e. elements that occurs more than N/2 times in the array\n",
+    "# We take a candidate and vote as a count of votes in the array\n",
+    "# if same candidate occur we increment the vote + 1\n",
+    "# else we decrement the vote by -1\n",
+    "# if the votes of the candidate becomes 0 then it is not a majority element\n",
+    "# we did until we find the votes does not become equal to zero\n",
+    "arr = [2,3,9,2,2]\n",
+    "candidate = -1 # initialize candidate as -1 \n",
+    "votes = 0 # no of votes\n",
+    "for  i in range(len(arr)):\n",
+    "    if votes == 0: # if votes are equal to zero choose next element\n",
+    "        candidate  = arr[i] # go to next elemwnt\n",
+    "        votes = 1 # initialize it to 1\n",
+    "    else:\n",
+    "        if candidate == arr[i+1]: # if we found candidate which does not become 1 then we found our candidate\n",
+    "            votes += 1\n",
+    "        else:\n",
+    "            votes -= 1\n",
+    "# we found the candidate now we need to find if it occurances are greater than N/2 \n",
+    "count = 0\n",
+    "for i in range(len(arr)):\n",
+    "    if candidate == arr[i]:\n",
+    "        count += 1 \n",
+    "if count > (len(arr)//2):\n",
+    "    print(candidate)\n",
+    "else:\n",
+    "    print(-1)\n",
+    "# O(n) Time Complexity\n",
+    "# O(1) Space Complexity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be8ad641",
+   "metadata": {},
+   "source": [
+    "## Mixed Questions "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c703b6fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# To check if the two strings are anagrams or not\n",
+    "# 1st Approach\n",
+    "str1 = 'listen'\n",
+    "str2 = 'silent'\n",
+    "a = sorted(str1)\n",
+    "b = sorted(str2)\n",
+    "if a==b:\n",
+    "    print(1)\n",
+    "else:\n",
+    "    print(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b27a4538",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Intersection Between Two Arrays and return the common elements b/w \n",
+    "# Both arrays are in non decreasing order\n",
+    "# Duplicate elements should be in common array\n",
+    "# Output should be in the order of the original array\n",
+    "a = [1,2,2,2,4] \n",
+    "b = [1,2,2,3]\n",
+    "c = [] # element that will contain common elements of the array\n",
+    "hash = {} # to map elements initailized a dictionary\n",
+    "for i in a: \n",
+    "    # get function can be replaced with if else statement\n",
+    "    # get takes key as a argument or a default value (optional) as 0 if the key not exist in dictionary\n",
+    "    # thus we can increment if we find the same value in the array\n",
+    "    hash[i] = hash.get(i,0) + 1 \n",
+    "for i in b:\n",
+    "    if i in hash: # i exist in dictionary\n",
+    "        if hash[i] > 0: # then its count greater than 0\n",
+    "            c.append(i) # Thus we add our final element\n",
+    "            hash[i] -= 1 # this will decrease no of count it contains in the dictionay\n",
+    "print(c)            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "dba2f949",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Majority element which is greater than N/3 occurances\n",
+    "# By using Moore Voting Algorithm\n",
+    "# In this scenario we assume their are at most 2 integers which contain more than N/3 occurances in the array\n",
+    "arr = [1,2,2,3,2,4] # array of integers\n",
+    "# we take 2 candidates\n",
+    "first_candidate = 0 \n",
+    "secound_candidate = 0\n",
+    "N = len(arr)\n",
+    "# a and b are varibles are votes for candidate first and secound\n",
+    "a = 0\n",
+    "b = 0\n",
+    "for i in range(len(arr)):\n",
+    "    if first_candidate == arr[i]: # increment if the next candidate is equal to first candidate\n",
+    "        a += 1\n",
+    "    elif b == 0: # if b = 0 no votes decreses to 0\n",
+    "        secound_candidate = arr[i] # take the next integer\n",
+    "        b = 1 # to increment for the first occurance\n",
+    "    elif secound_candidate == arr[i]: # increment if the next candidate is equal to secound candidate\n",
+    "        b += 1\n",
+    "    elif a == 0:\n",
+    "        first_candidate = arr[i]\n",
+    "        a = 1\n",
+    "    else: # if no next candidate decrement\n",
+    "        a -= 1\n",
+    "        b -= 1\n",
+    "# count the votes for both candidates\n",
+    "count1 = 0\n",
+    "count2 = 0\n",
+    "for i in range(len(arr)):\n",
+    "    if  first_candidate == arr[i]:\n",
+    "        count1 += 1\n",
+    "    if  secound_candidate == arr[i]:\n",
+    "        count2 += 1\n",
+    "# if all are distinct then it does not contain majority element\n",
+    "if count1 < N//3 and count2 < N//3 :\n",
+    "    print(-1)\n",
+    "# if first_candidate is majority element    \n",
+    "if count1 > N//3:\n",
+    "    print(first_candidate)\n",
+    "# if secound_candidate is majority element\n",
+    "if count2 > N//3:\n",
+    "    print(secound_candidate)        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f6e39aa8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 1, 2, 2, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Counting sort is a non-comparison based algorithm that works when there is a limited range of input values\n",
+    "# It is efficient when the count array range is less than the range of the input array\n",
+    "# This algorithm used the frequency of each distinct element to sort the array\n",
+    "# freq of element 'i' of input array is stored in the ith index of the count array\n",
+    "# Since integers contains -ve num, we used the indexing arr[i]-Min in the count array\n",
+    "# and the range = max - min + 1 as the indexing arr[i] - Min lies b/w it\n",
+    "arr = [1,2,0,1,2,5,4]\n",
+    "MAX = max(arr) \n",
+    "MIN = min(arr) \n",
+    "r = MAX - MIN + 1 # range of the count array \n",
+    "count = [0]*r # initialize count array\n",
+    "for i in range(len(arr)):\n",
+    "    count[arr[i]-MIN] += 1\n",
+    "for i in range(1,r):\n",
+    "    count[i] += count[i-1]\n",
+    "output = [0]*len(arr) # initialize output array\n",
+    "for i in range(len(arr)-1,-1,-1): # We iterate from the end of input array to make this sorting algorithm stable\n",
+    "    output[count[arr[i]-MIN]-1] = arr[i]\n",
+    "    count[arr[i]-MIN] -= 1\n",
+    "print(output)\n",
+    "# Time and Space Complecity is O(N+K) N length of input array, K length of count array "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "092e6c2b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 1, 5, 6, 4, 8, 9, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Rotate an matrix by k to the right and compute the order in a list\n",
+    "def rotaterow(row,k): # we rotate row \n",
+    "    row.reverse() # reverse rotated the array\n",
+    "    row[0:k] = row[0:k][::-1] # used slicing\n",
+    "    row[k:] = row[k:][::-1] # used k rotation\n",
+    "    return row\n",
+    "def rotatematrik(mat,n,m,k):\n",
+    "    k = k % m # Effective matrix rotation would be from 0 to m-1\n",
+    "    a = [] # output list initialized\n",
+    "    for i in range(n):\n",
+    "        rotaterow(mat[i],k)\n",
+    "        for j in mat[i]:\n",
+    "            a.append(j)\n",
+    "    return a\n",
+    "mat = [[1,2,3],[4,5,6],[7,8,9]]\n",
+    "k = 2\n",
+    "print(rotatematrik(mat,len(mat),len(mat[0]),k))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "abf0c1b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "abbcdcdcd\n",
+      "d\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find kth character of the decrypted string based on 1-based indexing \n",
+    "# such that a2b3cd2 = aabbbcdcd \n",
+    "# k = 2 i.e. 2nd character 'a'\n",
+    "# Given encrypted string = a2b3cd2\n",
+    "s = 'a1b2cd3' \n",
+    "n = len(s)\n",
+    "a = '' # output string variable\n",
+    "str1 = '' # string variable which will contain substring char by char\n",
+    "lastdigit = '' # the substring which will be added in output after we find a digit  \n",
+    "for i in range(n):\n",
+    "    str1 += s[i]\n",
+    "    if str1.isdigit(): # if the substring is a digit\n",
+    "        for j in range(int(str1)): # we will convert it into number\n",
+    "            a += lastdigit # lastdigit substring uptil the number we have found\n",
+    "        lastdigit = \"\" # thus we remove the substring to found new substring to add\n",
+    "    else:\n",
+    "        str1 = '' # str1 for new char if we find new string\n",
+    "        if len(lastdigit): # if lastdigit becomes not null that means string is found\n",
+    "            lastdigit += s[i] # thus we add the substring\n",
+    "        else: # else we found a number first thus now we need to add new sub-string to it\n",
+    "            lastdigit = s[i]\n",
+    "k = int(input())\n",
+    "print(a)\n",
+    "print(a[k-1])\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "eb85068c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n"
+     ]
+    }
+   ],
+   "source": [
+    "# In the previous question what if the encrypted string = ab12cd20\n",
+    "# the code in the previous test case was used when we only have a2(a single digit) not a12(a double digit)\n",
+    "# With my previous code executing char by char, a double digit number cannot gives us the desired result\n",
+    "# so we used list chunks to execute this\n",
+    "s = 'a12ab20'\n",
+    "number_chunk = [] # this list will contian the number encounter after the text character\n",
+    "letter_chunk = [] # this list will contian the chunk of charachter before we encounter a number\n",
+    "str1 = '' # contain output after we add string\n",
+    "for c in s:\n",
+    "    if c.isdigit(): # encounter a number\n",
+    "        number_chunk.append(c) # append the number list\n",
+    "    else:\n",
+    "        if number_chunk: # if it not empty\n",
+    "            text = \"\".join(letter_chunk)\n",
+    "            count = int(\"\".join(number_chunk))\n",
+    "            for j in range(count):\n",
+    "                str1 += text\n",
+    "            letter_chunk = []\n",
+    "            number_chunk = []\n",
+    "            text = \"\"\n",
+    "        letter_chunk.append(c) # not encounter a number append letter chunk\n",
+    "# last letter_chunk char did not get decrypt with the above loop \n",
+    "# but updated both number_chunk and letter_chunk\n",
+    "if number_chunk: \n",
+    "    count = int(\"\".join(number_chunk))\n",
+    "    text = \"\".join(letter_chunk)\n",
+    "    for i in range(count):\n",
+    "        str1 += text\n",
+    "k = 8\n",
+    "print(str1[k-1])       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6b5015b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "b\n"
+     ]
+    }
+   ],
+   "source": [
+    "# We can optimize this code further\n",
+    "# as we want only kth character\n",
+    "# so we will find it without decrypting all character\n",
+    "# so this will become memory efficient\n",
+    "s = 'a12ab20'\n",
+    "k = 8\n",
+    "number_chunk = [] \n",
+    "letter_chunk = []\n",
+    "current_index = 0 # This is current index at 0\n",
+    "desired_index = k - 1 # since its 1 based indexing\n",
+    "for c in s:\n",
+    "    if c.isdigit():\n",
+    "        number_chunk.append(c)\n",
+    "    else:\n",
+    "        if number_chunk:\n",
+    "            count = int(\"\".join(number_chunk))\n",
+    "# find the next_chunk_index i.e. after a...12 (0-11) next chunck is ab20 (12 - len(let_chunk)*2 + 20) in which starting index is 12\n",
+    "            next_index = current_index + count*len(letter_chunk)\n",
+    "# if next_index passes desired index that means it is between previous next index and new next index\n",
+    "# We use modulo operator with len to find which index in letter_chunk it belongs to our result kth character\n",
+    "            if next_index > desired_index:\n",
+    "                letter_index = (desired_index - current_index) % len(letter_chunk)\n",
+    "                print(letter_chunk[letter_index])\n",
+    "            current_index = next_index\n",
+    "            letter_chunk = []\n",
+    "            number_chunk = []\n",
+    "        letter_chunk.append(c)\n",
+    "if number_chunk:\n",
+    "    count = int(\"\".join(number_chunk))\n",
+    "    next_index = current_index + count * len(letter_chunk)\n",
+    "    if next_index > desired_index:\n",
+    "        letter_index = (desired_index - current_index) % len(letter_chunk)\n",
+    "        print(letter_chunk[letter_index])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "120b1850",
    "metadata": {},
    "outputs": [],
    "source": []
